--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -29,18 +29,16 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@96f53100ba2a5449eb71d2e6604bbcd94b9449b5
+        uses: actions/checkout@v3
 
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@7ba5ed7eed12f15064a031cc1fa3341f93764020
+        uses: github/codeql-action/init@v2
         with:
           languages: ${{ matrix.language }}
           source-root: src
 
       - name: Autobuild
-        uses: github/codeql-action/autobuild@7ba5ed7eed12f15064a031cc1fa3341f93764020
+        uses: github/codeql-action/autobuild@v2
 
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@7ba5ed7eed12f15064a031cc1fa3341f93764020
-
-...
+        uses: github/codeql-action/analyze@v2
