--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -19,13 +19,13 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 16.x, 18.x ]
+        node-version: [ 18.x, 20.x ]
 
     steps:
-      - uses: actions/checkout@96f53100ba2a5449eb71d2e6604bbcd94b9449b5
+      - uses: actions/checkout@v3
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@e33196f7422957bea03ed53f6fbb155025ffc7b8
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: yarn
@@ -44,7 +44,5 @@ jobs:
         run: yarn test
 
       - name: Codecov
-        if: ${{ matrix.node-version == '18.x' }}
-        uses: codecov/codecov-action@4b062cb89c1fe1fd7da7e013d554a088ea14178a
-
-...
+        if: ${{ matrix.node-version == '20.x' }}
+        uses: codecov/codecov-action@v3
