--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript-action",
+  "name": "auto-merge",
   "version": "1.0.0",
-  "description": "TypeScript template action",
+  "description": "",
   "main": "src/main.ts",
   "scripts": {
     "build": "tsc",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/redhat-plumbers-in-action/typescript-action.git"
+    "url": "git+https://github.com/redhat-plumbers-in-action/auto-merge.git"
   },
   "keywords": [
     "actions",
@@ -26,25 +26,29 @@
   "license": "MIT",
   "packageManager": "yarn@3.6.0",
   "dependencies": {
-    "@actions/core": "1.10.0",
-    "@octokit/rest": "19.0.13",
-    "@probot/adapter-github-actions": "3.1.3",
-    "class-validator": "^0.14.0"
+    "@actions/core": "^1.10.1",
+    "@octokit/core": "^5.0.1",
+    "@octokit/rest": "^20.0.2",
+    "@octokit/types": "^12.1.1",
+    "@probot/octokit-plugin-config": "^2.0.0",
+    "bugzilla": "^3.1.2",
+    "deepmerge": "^4.3.1",
+    "jira.js": "^3.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@actions/github": "5.1.1",
-    "@types/node": "18.16.18",
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "@typescript-eslint/parser": "5.60.1",
-    "@vercel/ncc": "0.36.1",
-    "@vitest/coverage-c8": "0.29.2",
-    "eslint": "8.43.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "js-yaml": "4.1.0",
-    "nock": "13.3.1",
-    "prettier": "2.8.8",
-    "ts-node": "10.9.1",
-    "typescript": "4.9.5",
-    "vitest": "0.29.2"
+    "@actions/github": "^6.0.0",
+    "@total-typescript/ts-reset": "^0.5.1",
+    "@types/node": "^20.8.10",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "@vercel/ncc": "^0.38.1",
+    "@vitest/coverage-v8": "^0.34.6",
+    "eslint": "^8.52.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6"
   }
 }
