--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@octokit/core": "^5.0.1",
+    "@octokit/plugin-throttling": "^8.1.3",
     "@octokit/rest": "^20.0.2",
     "@octokit/types": "^12.1.1",
     "@probot/octokit-plugin-config": "^2.0.0",
