--- a/action.yml
+++ b/action.yml
@@ -35,9 +35,22 @@ inputs:
   jira-api-token:
     description: Jira API TOKEN
 
+  set-status:
+    required: true
+    default: 'false'
+    description: Set check-run status on Pull Request
+  status-title:
+    required: false
+    default: Auto Merge
+    description: H3 title of status message
+
   token:
     required: true
     description: GitHub TOKEN or PAT
+
+outputs:
+  status:
+    description: Status message of the validation
 
 runs:
   using: node20
