--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "package": "ncc build --source-map --license licenses.txt",
     "test": "vitest run --coverage",
     "update-snapshots": "vitest run --update",
-    "all": "yarn run build && yarn run format && yarn run lint && yarn run package && yarn test"
+    "all": "yarn run build && yarn run format && yarn run package && yarn test"
   },
   "repository": {
     "type": "git",
