--- a/package.json
+++ b/package.json
@@ -25,31 +25,32 @@
   "author": "jamacku@redhat.com",
   "license": "MIT",
   "packageManager": "yarn@4.3.1",
+  "type": "module",
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@octokit/core": "^5.0.1",
-    "@octokit/plugin-throttling": "^8.1.3",
-    "@octokit/rest": "^20.0.2",
-    "@octokit/types": "^12.1.1",
-    "@probot/octokit-plugin-config": "^2.0.0",
+    "@octokit/core": "^6.1.2",
+    "@octokit/plugin-throttling": "^9.3.0",
+    "@octokit/rest": "^21.0.0",
+    "@octokit/types": "^13.5.0",
+    "@probot/octokit-plugin-config": "^3.0.2",
     "bugzilla": "^3.1.2",
     "deepmerge": "^4.3.1",
-    "jira.js": "^3.0.0",
-    "zod": "^3.22.4"
+    "jira.js": "^4.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@actions/github": "^6.0.0",
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/node": "^20.8.10",
+    "@types/node": "^20.14.7",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "@vercel/ncc": "^0.38.1",
-    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/coverage-v8": "^1.6.0",
     "eslint": "^8.52.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "vitest": "^0.34.6"
+    "prettier": "^3.3.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2",
+    "vitest": "^1.6.0"
   }
 }
