--- a/package.json
+++ b/package.json
@@ -26,26 +26,26 @@
   "packageManager": "yarn@4.5.0",
   "type": "module",
   "dependencies": {
-    "@actions/core": "^1.10.1",
-    "@octokit/core": "^6.1.2",
-    "@octokit/plugin-throttling": "^9.3.1",
-    "@octokit/rest": "^21.0.2",
-    "@octokit/types": "^13.5.1",
-    "@probot/octokit-plugin-config": "^3.0.2",
-    "bugzilla": "^3.1.2",
-    "deepmerge": "^4.3.1",
-    "jira.js": "^4.0.2",
-    "zod": "^3.23.8"
+    "@actions/core": "1.11.1",
+    "@octokit/core": "6.1.2",
+    "@octokit/plugin-throttling": "9.3.2",
+    "@octokit/rest": "21.0.2",
+    "@octokit/types": "13.6.1",
+    "@probot/octokit-plugin-config": "3.0.2",
+    "bugzilla": "3.1.2",
+    "deepmerge": "4.3.1",
+    "jira.js": "4.0.2",
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "@actions/github": "^6.0.0",
-    "@total-typescript/ts-reset": "^0.6.1",
-    "@types/node": "^22.7.2",
-    "@vercel/ncc": "^0.38.2",
-    "@vitest/coverage-v8": "^2.1.1",
-    "prettier": "^3.3.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
-    "vitest": "^2.1.1"
+    "@actions/github": "6.0.0",
+    "@total-typescript/ts-reset": "0.6.1",
+    "@types/node": "22.7.9",
+    "@vercel/ncc": "0.38.2",
+    "@vitest/coverage-v8": "2.1.3",
+    "prettier": "3.3.3",
+    "ts-node": "10.9.2",
+    "typescript": "5.6.3",
+    "vitest": "2.1.3"
   }
 }
